# yt-downloader

./: .gitignore  ReadMe.md  helper.md  links.txt  pyproject.toml
src/yt_downloader/: downloader.py  main.py  queue_manager.py
